@@ -4,4 +4,5 @@ this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="generated_report" widget="url"/>
     <field name="file_basename" expand="1"/>
+    <field name="output_report_filepath" tree_invisible="1"/>
 </tree>
